# bean-agent-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: agent-core-ci.yml  agent-core-pr.yml  ci.yml
benchmark/: README.md  pyproject.toml  requirements.yaml
benchmark/cases/: tier_1.yaml  tier_2.yaml  tier_3.yaml
benchmark/fixtures/basic-us-v1/: main.beancount
benchmark/fixtures/imports-us-v1/: main.beancount
benchmark/fixtures/imports-us-v1/input/: credit-card-june.csv
benchmark/fixtures/investments-us-v1/: main.beancount
benchmark/fixtures/investments-us-v1/data/agent_inc/: 2026-06.beancount
benchmark/fixtures/legacy-split-us-v1/: main.beancount
benchmark/fixtures/legacy-split-us-v1/legacy/: 2019.beancount  2026-06-import.beancount
benchmark/fixtures/multi-currency-us-v1/: main.beancount
benchmark/fixtures/multi-currency-us-v1/data/agent_inc/: main.beancount
benchmark/src/beanbench/: __init__.py  __main__.py  cli.py  config.py  fixture_manager.py  llm_judge.py  reporter.py  requestor.py  result_store.py  runner.py  tier1_evaluator.py
benchmark/tests/: test_requestor.py  test_runner.py
src/agent_core/: agent.py  config.py  context.py  main.py  tracing.py
src/agent_core/ledger/: __init__.py  _beancount.py  analytics.py  ingestion.py  mutations.py  prices.py  prompt.md  report.py  state.py  workspace.py
src/agent_core/services/: __init__.py  account_lifecycle.py  activity.py  beancount.py  ingestion.py  inspection.py  ledger.py  ledger_paths.py  onboarding.py  orchestrator.py  pending_actions.py  preflight.py  preflight_context.py  price_directives.py  prices.py  queries.py  (+7 more)
(+96 files in other folders)
