[project]
name = "agent-core"
version = "0.1.0"
description = "Stateless Beancount ledger agent — execution plane for personal finance AI"
license = { text = "GPL-2.0-only" }
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2",
    "langchain-core>=1.3",
    "langchain-openai>=0.3",
    "langgraph>=1.1",
    "langfuse>=4.0,<5.0",
    "fastapi>=0.115",
    "uvicorn>=0.40",
    "httpx>=0.28",
    "python-dotenv>=1.2",
    "click>=8.3",
    "beancount>=3.0",
    "beanquery>=0.2",
    "jinja2>=3.1",
    "filelock>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/agent_core/tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]

