[project]
name = "beanbench"
version = "0.1.0"
description = "Public benchmark framework for evaluating Agent-Core as a trustworthy Beancount collaborator"
requires-python = ">=3.11"
dependencies = [
    "beancount>=3.0",
    "click>=8.3",
    "httpx>=0.28",
    "langchain-openai>=0.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beanbench"]
